// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sink error queries > buildBucketedSourceErrorsQuery produces the expected query 1`] = `
[
  "u1",
  2023-06-08T22:49:19.754Z,
  2023-06-09T22:49:19.754Z,
]
`;

exports[`sink error queries > buildBucketedSourceErrorsQuery produces the expected query 2`] = `"select count("ssh"."error") as "count", extract(epoch from date_bin(interval '180 seconds', occurred_at, '2023-06-08T22:49:19.754Z')) * 1000 as "timestamp" from "mz_sink_status_history" as "ssh" where "ssh"."sink_id" = $1 and "ssh"."occurred_at" between $2 and $3 group by "timestamp" order by "timestamp""`;

exports[`sink error queries > buildSinkErrorsQuery produces the expected query 1`] = `
[
  "u1",
]
`;

exports[`sink error queries > buildSinkErrorsQuery produces the expected query 2`] = `"select max("h"."occurred_at") as "lastOccurred", "h"."error", count("h"."occurred_at") as "count" from "mz_sink_status_history" as "h" where "h"."sink_id" = $1 and "h"."error" is not null and h.occurred_at between '2023-06-08T22:49:19.754Z' AND '2023-06-09T22:49:19.754Z' group by "h"."error" order by "lastOccurred" desc limit 100"`;
